# DynaMPI

./: .clang-format  .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamllint  CMakeLists.txt  LICENSE.txt  README.md  REUSE.toml  codecov.yml  license_header.txt
LICENSES/: Apache-2.0.txt
benchmark/: CMakeLists.txt  asymptotic_distribution_throughput.cpp  naive_shutdown_time.cpp  pingpong.cpp  strong_scaling_distribution_rate.cpp  timer_resolution.cpp
benchmark/aurora/: aurora_compile.sh
benchmark/frontier/: frontier_compile.sh
benchmark/results/: naive_shutdown_local.csv  strong_scaling_local.csv
benchmark/results/aurora/1-dynampi_shutdown_aurora_1-8273278.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/1-dynampi_ss_aurora_1-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/128-dynampi_shutdown_aurora_128-8273285.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/128-dynampi_ss_aurora_128-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/16-dynampi_shutdown_aurora_16-8273282.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/16-dynampi_ss_aurora_16-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/2-dynampi_shutdown_aurora_2-8273279.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/2-dynampi_ss_aurora_2-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/256-dynampi_shutdown_aurora_256-8273286.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/256-dynampi_ss_aurora_256-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/32-dynampi_shutdown_aurora_32-8273283.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/32-dynampi_ss_aurora_32-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/4-dynampi_shutdown_aurora_4-8273280.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/4-dynampi_ss_aurora_4-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/512-dynampi_shutdown_aurora_512-8273287.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/512-dynampi_ss_aurora_512-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/64-dynampi_shutdown_aurora_64-8273284.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/64-dynampi_ss_aurora_64-manual/: strong_scaling_aurora.csv
benchmark/results/aurora/8-dynampi_shutdown_aurora_8-8273281.aurora/: naive_shutdown_aurora.csv
benchmark/results/aurora/8-dynampi_ss_aurora_8-manual/: strong_scaling_aurora.csv
benchmark/results/frontier/1-dynampi_shutdown_frontier_1-4058166/: naive_shutdown_frontier.csv
benchmark/results/frontier/1-dynampi_ss_frontier_1-4054467/: strong_scaling_frontier.csv
benchmark/results/frontier/1-dynampi_ss_frontier_1-4054787/: strong_scaling_frontier.csv
benchmark/results/frontier/1-dynampi_ss_frontier_1-4058681/: strong_scaling_frontier.csv
benchmark/results/frontier/1024-dynampi_shutdown_frontier_1024-4058261/: naive_shutdown_frontier.csv
benchmark/results/frontier/1024-dynampi_ss_frontier_1024-4058697/: strong_scaling_frontier.csv
benchmark/results/frontier/128-dynampi_shutdown_frontier_128-4058173/: naive_shutdown_frontier.csv
benchmark/results/frontier/128-dynampi_ss_frontier_128-4054794/: strong_scaling_frontier.csv
benchmark/results/frontier/128-dynampi_ss_frontier_128-4058688/: strong_scaling_frontier.csv
benchmark/results/frontier/16-dynampi_shutdown_frontier_16-4058170/: naive_shutdown_frontier.csv
benchmark/results/frontier/16-dynampi_ss_frontier_16-4054471/: strong_scaling_frontier.csv
benchmark/results/frontier/16-dynampi_ss_frontier_16-4054791/: strong_scaling_frontier.csv
benchmark/results/frontier/16-dynampi_ss_frontier_16-4058685/: strong_scaling_frontier.csv
benchmark/results/frontier/2-dynampi_shutdown_frontier_2-4058167/: naive_shutdown_frontier.csv
benchmark/results/frontier/2-dynampi_ss_frontier_2-4054468/: strong_scaling_frontier.csv
benchmark/results/frontier/2-dynampi_ss_frontier_2-4054788/: strong_scaling_frontier.csv
benchmark/results/frontier/2-dynampi_ss_frontier_2-4058682/: strong_scaling_frontier.csv
benchmark/results/frontier/2048-dynampi_shutdown_frontier_2048-4058262/: naive_shutdown_frontier.csv
benchmark/results/frontier/256-dynampi_shutdown_frontier_256-4058174/: naive_shutdown_frontier.csv
benchmark/results/frontier/256-dynampi_ss_frontier_256-4054795/: strong_scaling_frontier.csv
benchmark/results/frontier/256-dynampi_ss_frontier_256-4058689/: strong_scaling_frontier.csv
benchmark/results/frontier/32-dynampi_shutdown_frontier_32-4058171/: naive_shutdown_frontier.csv
benchmark/results/frontier/32-dynampi_ss_frontier_32-4054472/: strong_scaling_frontier.csv
benchmark/results/frontier/32-dynampi_ss_frontier_32-4054792/: strong_scaling_frontier.csv
benchmark/results/frontier/32-dynampi_ss_frontier_32-4058686/: strong_scaling_frontier.csv
benchmark/results/frontier/4-dynampi_shutdown_frontier_4-4058168/: naive_shutdown_frontier.csv
benchmark/results/frontier/4-dynampi_ss_frontier_4-4054469/: strong_scaling_frontier.csv
benchmark/results/frontier/4-dynampi_ss_frontier_4-4054789/: strong_scaling_frontier.csv
benchmark/scripts/: aurora_queue_utils.sh  check_timer_resolution.sh  launch_aurora_naive_shutdown.sh  launch_aurora_strong_scaling.sh  launch_frontier_naive_shutdown.sh  launch_frontier_strong_scaling.sh  launch_local_naive_shutdown.sh  launch_local_strong_scaling.sh  plot_common.py  plot_shutdown_time.py  plot_strong_scaling.py  requirements.txt  submit_aurora_naive_shutdown.sh  submit_aurora_strong_scaling.sh  submit_frontier_naive_shutdown.sh  submit_frontier_strong_scaling.sh
dev/: 404.html  (+2 more)
interfaces/c/: CMakeLists.txt
interfaces/c/cmake/: DynaMPICConfig.cmake.in
interfaces/c/examples/: simple_example.c
interfaces/c/include/: dynampi.h
interfaces/c/src/: dynampi.cpp
interfaces/c/test/: test_c_interface.c
test/: CMakeLists.txt  lsan.supp
test/mpi/: mpi_test_environment.hpp  mpi_test_main.cpp  test_distributers.cpp  test_mpi_wrapper.cpp
test/unit/: test_assert.cpp  test_dynampi_api.cpp  test_printing.cpp  test_timer.cpp
(+288 files in other folders)
